# ChangeLog for net-p2p/freenet-bin
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  10 Nov 2007; (Tommy[D]) tommy100@gmx.de +freenet-bin-0.7.1071.ebuild:
  New upstream release with a workaround, please leave 1070 in tree

  26 Oct 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1069.ebuild,
  +freenet-bin-0.7.1070.ebuild:
  New upstream release

  24 Oct 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1068.ebuild,
  +freenet-bin-0.7.1069.ebuild:
  New upstream release

  23 Oct 2007; (Tommy[D]) tommy100@gmx.de -freenet-bin-0.7.1065.ebuild,
  +freenet-bin-0.7.1068.ebuild:
  New upstream release

  26 Sep 2007; Tommy[D] <tommy100@gmx.de>
  -freenet-bin-0.7.1064.ebuild, +freenet-bin-0.7.1065.ebuild:
  New upstream release

  24 Sep 2007; Tommy[D] <tommy100@gmx.de>
  -freenet-bin-0.7.1062.ebuild, +freenet-bin-0.7.1064.ebuild:
  New upstream release

  14 Sep 2007; Tommy[D] <tommy100@gmx.de>
  -freenet-bin-0.7.1061-r2.ebuild, +freenet-bin-0.7.1062.ebuild:
  New upstream release

  14 Sep 2007; Tommy[D] <tommy100@gmx.de>
  -freenet-bin-0.7.1061-r1.ebuild, +freenet-bin-0.7.1061-r2.ebuild:
  Added wrapper init script, so login shell not longer needed

  14 Sep 2007; Tommy[D] <tommy100@gmx.de>
  freenet-bin-0.7.1061-r1.ebuild:
  Revert emerge command and delete useless groupdel

  14 Sep 2007; Tommy[D] <tommy100@gmx.de>
  freenet-bin-0.7.1061-r1.ebuild:
  Use eerror instead of error and change user command

  14 Sep 2007; Jakub Moc <jakub@gentoo.org> -freenet-bin-0.7.1061.ebuild,
  +freenet-bin-0.7.1061-r1.ebuild:
  Revbump this and make users fix up the previous screw-up

  14 Sep 2007; Jakub Moc <jakub@gentoo.org> freenet-bin-0.7.1061.ebuild:
  Use $RANDOM bash built-in instead of the dd hack

  14 Sep 2007; Jakub Moc <jakub@gentoo.org> freenet-bin-0.7.1061.ebuild:
  Remove useless RESTRICT; einfo -> elog; clean up formatting

  11 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  freenet-bin-0.7.1061.ebuild: