@@ -1,11 +1,9 @@
 AUX freenet 416 RMD160 95efeda98fe723027c74729b03fd293ca29bdc7a SHA1 796d336341796d081454ebcc45248e90fffaed91 SHA256 d3b665e8d619d995ef9cb67ed4006c96bc4fdf80e6b7923247e022268ab8bae5
 DIST freenet-ext.jar 2452429 RMD160 fdac9646f7fbb5ee82ad62580191695cc6bef593 SHA1 712aaf061e5e35df47ab6727476b78a0cf8c47da SHA256 1ab33492054eb6e8550f608d3b7d6f3a5117b5905f342bfad8cb38a2a9350bf2
-DIST freenet-r15591-snapshot.jar 2188111 RMD160 9cbc5cd1fcd848b8813a48f5857496947140f1eb SHA1 9ddc9f988f075621265515f3ab2fc774e8145609 SHA256 f74b3cc19d362c6117ef077251449655cd8bc32d4b437d048126135dd04f9bab
-DIST freenet-r15726-snapshot.jar 2208871 RMD160 abb59dd7b69db06fcc842394d18154774feca341 SHA1 f62848dda8ae4a589a404947d9280d74c57afaf4 SHA256 8f072cd28070e0c8e01c3ef81065a5f763f11c449e7fc52e4bb5f43941cb306e
+DIST freenet-r15753-snapshot.jar 2208829 RMD160 4ac871e654b28c95a5ed58860ac0de9776e2a366 SHA1 cb653caabfee7f1086188341b874e3f6f70b3091 SHA256 9fd6a5d36230437e182c844a2f7e79e0c7f2e3ef42c070c13bfbdc1a299b391e
 DIST freenet07.tar.gz 383366 RMD160 d6f7baee05c1fe2d713fa345fae10bc25287b61e SHA1 8e9ddde6420f5cc24824467747b7a3bcbc21b15c SHA256 aae56bd0d2ed7d80217b1eccab1cf3a946a517df83fc6c1a9de7b95fd82724aa
 DIST update.sh 3115 RMD160 e65f151e06b5a6425dcb59f03b4874ec1e8b5047 SHA1 e024bcfc443982fcc3d888088ef427943fa62f71 SHA256 df80518672316ae8d330e08ef50f170eabacd9003eeac975a400523d0f61922c
 DIST wrapper.conf 1706 RMD160 413f4fec1f60b6d4651f1ffd945e6d9ec2275e39 SHA1 8ec5648d5677325a867118e687f1e05cfe4a417a SHA256 f56a8e897297107c3ea2c95da5f321556e1ac82e87d81f339610f8bb27ecd88b
-EBUILD freenet-bin-0.7.1070.ebuild 2488 RMD160 1ef4f786acc6f23fa1797e7cd80a486b351bd5cf SHA1 5f372de10474a8f49b61f0969fb3b976ccb62764 SHA256 8705262ad2ececc49e09d09f54c80f2e3221a3211484d6399630c10d740fcf3f
-EBUILD freenet-bin-0.7.1071.ebuild 2906 RMD160 22c4fdc3b88114749b8b7970897f6c40990252e9 SHA1 18cb3f0d4ffd7178563fc8c19a9f0030860a333f SHA256 932664b6a660d91bec957c5154bd7c59776f70c75870e27b1ddf0af369f29259
-MISC ChangeLog 3542 RMD160 c3cd07aebb9665452cc26a29ef810a50fd70ab6d SHA1 612f58b248da37fe1e43a0f82a657c696533d13d SHA256 2bce0ee6fce646be6ddd0b6c8cd4265e4c90c5f3b4e099d799f31867f3d7a20f
+EBUILD freenet-bin-0.7.1073.ebuild 2409 RMD160 449e4fe0321f10536eeb5fb356bc0cc4efbe260d SHA1 f95685dec27283ed150a03d9e5a3431bc4e19961 SHA256 67b10e4bb3b37945b18509c6b2907217abce662f83aaa5e9cf243203e9d1d8a3
+MISC ChangeLog 3674 RMD160 81473336ebf5046b5bdce21be065bba82ebf51d1 SHA1 4a8e854df36ac85b47a85563db9bb97c6eee6a8f SHA256 6ec6d5177a63caa2a0545960505108eb18bac9b3bd470f73d2773e5e74d19f08
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
