@@ -2,6 +2,10 @@
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  10 Nov 2007; (Tommy[D]) tommy100@gmx.de ++, -freenet-bin-0.7.1070.ebuild,
+  -freenet-bin-0.7.1071.ebuild:
+  New upstream release
+
   10 Nov 2007; (Tommy[D]) tommy100@gmx.de +freenet-bin-0.7.1071.ebuild:
   New upstream release with a workaround, please leave 1070 in tree
 
